src/frontend/tui/snapshots/illustrious_manager__frontend__tui__input_area__tests__render_cancelling.snap
---
source: src/frontend/tui/input_area.rs
assertion_line: 695
expression: terminal.backend()
---
"┌[00:55] Cancelling... (Esc to interrupt)──────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
