src/frontend/tui/snapshots/illustrious_manager__frontend__tui__input_area__tests__render_compacting.snap
---
source: src/frontend/tui/input_area.rs
assertion_line: 901
expression: terminal.backend()
---
"┌ Compacting... ───────────────────────┐"
"│                                      │"
"└──────────────────────────────────────┘"
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
