src/frontend/tui/snapshots/illustrious_manager__frontend__tui__input_area__tests__render_hello.snap
---
source: src/frontend/tui/input_area.rs
expression: terminal.backend()
---
"┌Input (Enter to send, Ctrl+C to quit)─────────────────────┐"
"│hello                                                     │"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
