src/frontend/tui/snapshots/illustrious_manager__frontend__tui__input_area__tests__render_running_bash_with_elapsed.snap
---
source: src/frontend/tui/input_area.rs
expression: terminal.backend()
---
"┌[00:55] Running bash... (Esc to cancel)───────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
