src/frontend/tui/snapshots/illustrious_manager__frontend__tui__input_area__tests__render_streaming.snap
---
source: src/frontend/tui/input_area.rs
assertion_line: 657
expression: terminal.backend()
---
"┌ Streaming... (Esc to interrupt) ─────┐"
"│                                      │"
"└──────────────────────────────────────┘"
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
