src/frontend/tui/snapshots/illustrious_manager__frontend__tui__input_area__tests__render_streaming_with_elapsed.snap
---
source: src/frontend/tui/input_area.rs
assertion_line: 659
expression: terminal.backend()
---
"┌[00:55] Streaming... (Esc to interrupt)───────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
