src/frontend/tui/snapshots/illustrious_manager__frontend__tui__input_area__tests__render_tasks_picker.snap
---
source: src/frontend/tui/input_area.rs
expression: terminal.backend()
---
"┌ Tasks ───────────────────────────────┐"
"│                                      │"
"└──────────────────────────────────────┘"
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
