src/frontend/tui/snapshots/illustrious_manager__frontend__tui__input_area__tests__render_tool_confirmation.snap
---
source: src/frontend/tui/input_area.rs
assertion_line: 732
expression: terminal.backend()
---
"┌ Allow 'write_file'? [y/n] ───────────────────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
